# user-balance-microservice

./: .env  .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
UserBalanceMicroservice/: asgi.py  settings.py  urls.py  wsgi.py
UserBalanceMicroservice/orders/: admin.py  apps.py  models.py
UserBalanceMicroservice/orders/migrations/: 0001_initial.py
UserBalanceMicroservice/reporting/: admin.py  apps.py
UserBalanceMicroservice/scripts/: add_services.py  generate_transactions.py  generate_users.py
UserBalanceMicroservice/services/: admin.py  apps.py  models.py
UserBalanceMicroservice/services/migrations/: 0001_initial.py
UserBalanceMicroservice/transactions/: admin.py  apps.py  models.py
UserBalanceMicroservice/transactions/migrations/: 0001_initial.py  0002_alter_transaction_status.py
UserBalanceMicroservice/user_accounts/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
UserBalanceMicroservice/user_accounts/migrations/: 0001_initial.py
